syntax = "proto3";
option java_multiple_files = true;
package ru.practical.work.proto;

import "google/protobuf/timestamp.proto";  // Импорт Timestamp
message Ticket {
  string number = 1;
  google.protobuf.Timestamp registration_time = 2;
  Status status = 3;

}

message Session {
  google.protobuf.Timestamp entry_time = 1;
  SessionStatus status = 2;

  enum SessionStatus {
    IDLE = 0;
    CALL = 1;
    SERVE = 2;
  }
}

service RegistrationService {
  rpc RegisterTicket(RegisterTicketRequest) returns (RegisterTicketResponse);
}

message RegisterTicketRequest {
  string number = 1;
  int64 registration_time = 2;
  Status status = 3;

}

enum Status {
  WAITING = 0;
  CALLING = 1;
  SERVING = 2;
  SERVED = 3;
}

message RegisterTicketResponse {
  string number = 1;
  int64 registration_time = 2;
  Status status = 3;
}

service DataRetrievalService {
  rpc ReceiveTicket(ReceiveTicketRequest) returns (ReceiveTicketResponse);
}

message ReceiveTicketRequest {
  string ticket_number = 1;
}

message ReceiveTicketResponse {
  string ticket_number = 1;
}

